fixed admin, fixed png jpeg all types , fixed getting correct profile picture every time instead of post picture